0.4.0
 - ref: support NumPy 2
 - setup: migrate to GitHub Actions
 - setup: migrate to pyproject.toml
 - docs: remove dependency on old mock standalone library (#19)
0.3.3
 - fix: add constant `ZERO_CUTOFF` that defines when a trace average is
   treated as zero
 - enh: replace asserts with raises (#15)
0.3.2
 - fix: multipletau package not available when building the docs
0.3.1
 - fix: detect correct version when building the docs from source tar ball
0.3.0
 - feat: add option to choose the strategy for propagating values to
   the next register (#14)
 - feat: add option to return the pure sum and the internal normalization
   count (#14)
0.2.0
 - tests: filter warnings and check with flake8
 - implement unique warning classes
0.1.9
 - include docs in sdist
0.1.8
 - update documentation and example files
 - move documentation to readthedocs.io
0.1.7
 - code cleanup with pep8 and autopep8 
 - always use numpy dtypes
 - fix tests:
    - take into account floating inaccuracies
    - support i386 numpy dtypes
0.1.6
 - also compute correlation for zero lag time (`G(tau==0)`)
 - support NumPy 1.11
 - add tests to complete code coverage
 - bugfixes:
  - wrong normalization for cplx array `v` in `correlate` if `normalize==True`
  - wrong normalization in `correlate_numpy` if `normalize==False`
0.1.5
 - update documentation
 - support Python 3
0.1.4
 - integer and boolean input types are now automatically converted to floats
 - `multipletau.correlate` now works with complex data types
 - `multipletau.correlate` now checks if input data are same objects
 - documentation now contains examples
0.1.3
 - first non-cython implementation