@@ -74,6 +74,7 @@ extensions = ['sphinx.ext.intersphinx',
               'sphinx.ext.viewcode',
               'sphinx.ext.napoleon',
               'fancy_include',
+              'github_changelog',
               ]
 
 
@@ -143,7 +144,7 @@ copyright = year+", "+author
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-html_theme = 'default'
+html_theme = 'sphinx_rtd_theme'
 
 # Add any paths that contain custom themes here, relative to this directory.
 # html_theme_path = []
