@@ -1,5 +1,4 @@
-mock
-sphinx==4.3.0
-sphinxcontrib.bibtex>=2.0
-sphinx_rtd_theme==1.0
+sphinx
+sphinxcontrib.bibtex
+sphinx_rtd_theme
 
